# apriltag

./: usb_cam_lunch.launch
pub_motion_cap/: CMakeLists.txt~  ClientRecorder.cpp  package.xml
pub_motion_cap/include/NatNetLinux/: NatNet.h
pub_motion_cap/include/Utilities/: RMS_Utils_Basics.hpp  RMS_Utils_Face.hpp  RMS_Utils_Float_Image.hpp  RMS_Utils_Float_Vector2.hpp  RMS_Utils_Float_Vector3.hpp  RMS_Utils_Float_Vertex3.hpp  RMS_Utils_Linear_Algebra.hpp  RMS_Utils_Mesh.hpp  RMS_Utils_OpenCV_Features.hpp  RMS_Utils_OpenGL_Model_Parser.hpp  RMS_Utils_PCL.hpp  RMS_Utils_Signal_Processing.hpp  RMS_Utils_Time.hpp  rs232.cpp
pub_motion_cap/include/Utilities/GetOpts/: GetOpts.hpp  Makefile  test.cpp
pub_motion_cap/include/Utilities/LCM_Types/: gray_image_t.lcm  image_t.lcm  imu_t.lcm  imu_vs_t .lcm  mocap_t.lcm  pcl_pointcloud_float_t.lcm  quad_control_t.lcm  quad_vscontrol_t .lcm  rgbd_image_t.lcm  test_lcm_t.lcm
pub_motion_cap/include/Utilities/LCM_Types/lcm_t_headers/: gray_image_t.hpp  image_t.hpp  imu_t.hpp  mocap_t.hpp  pcl_pointcloud_float_t.hpp  quad_control_t.hpp  quad_vscontrol_t.hpp  rgbd_image_t.hpp  test_lcm_t.hpp
ros_apriltags/: CMakeLists.txt  apriltags_ros.cpp
ros_apriltags/example/: CMakeLists.txt  apriltags_dema.cpp  apriltags_dema.cpp~  package.xml
ros_apriltags/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
ros_apriltags/pod-build/example/: Makefile  cmake_install.cmake
ros_apriltags/pod-build/lib/pkgconfig/: apriltags.pc
sub_apriltag_mocap/: CMakeLists.txt  package.xml  sub_apriltag_mocap.cpp
